# el-fort-platform

./: .gitignore
adapters/bank-adapter/: README.md
adapters/bank-adapter/csharp/: README.md
adapters/bank-adapter/java/: pom.xml
adapters/bank-adapter/nodejs/: README.md  package.json  tsconfig.json
adapters/bank-adapter/rust/: Cargo.toml  README.md
adapters/bank-adapter/rust/src/: adapter.rs  main.rs  router.rs  security.rs
adapters/go/: efn.go
adapters/nodejs/: index.js  package.json
adapters/python/: setup.py
adapters/python/efn_subscriptions/: __init__.py
adapters/utility-adapter/: README.md
adapters/utility-adapter/go/: README.md  (+2 more)
adapters/utility-adapter/rust/: Cargo.toml  README.md
adapters/utility-adapter/rust/src/: adapter.rs  lib.rs  main.rs  models.rs  router.rs  security.rs
binaries/: EL-FORT SMART TERMINAL-1.0.0.AppImage  el-fort-smart-terminal_1.0.0_amd64.deb
certification/: README.md  efn_certify.py  mock_bank_adapter.py  openapi_partner_bank_adapter.yaml  sample_config.json  test_vectors.json
csharp/: EfnAdapter.csproj
csharp/EfnAdapter/: EfnAdapterController.cs  EfnAdapterServiceExtensions.cs  Models.cs  Security.cs
csharp/EfnAdapter.Tests/: EfnAdapter.Tests.csproj  SecurityTests.cs
go/: README.md  go.mod
go/adapter/: adapter.go  security_test.go  types.go
go/example/: main.go
java/: README.md  pom.xml
nodejs/: package-lock.json
python/: README.md
python/efn_adapter/: __init__.py  adapter.py  models.py  security.py
python/example/: adapter_impl.py  django_urls.py
rust/src/: lib.rs  models.rs  security.rs
(+96 files in other folders)
