[package]
name = "efn-bank-adapter"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "efn-bank-adapter"
path = "src/main.rs"

[lib]
name = "efn_bank_adapter"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
