[package]
name = "efn_utility_adapter"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
async-trait = "0.1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
